--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,8 +13,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
->
-jobs:>
+
+jobs:
   build:
 
     runs-on: ubuntu-latest
